fix next page button on mobile

--- a/sites/bradwinter.ca/style.css
+++ b/sites/bradwinter.ca/style.css
@@ -69,36 +69,19 @@ ul {
 }
 
 
-
-
-#link5 {
-    left: 10%;
-    top: 30vh;
-}
-
-#link6 {
-    left: 62%;
-    top: 55vh;
-}
-
-#link7 {
-    left: 70%;
-    top: 70vh;
-}
-
 #dolphin {
     left: 27%;
-    top: 28vh;
+    top: 28%;
 }
 
 #goggle {
     left: 40%;
-    top: 80vh;
+    top: 80%;
 }
 
 #palm {
     left: 80%;
-    top: 40vh;
+    top: 40%;
 }
 
 
@@ -126,6 +109,10 @@ ul {
     z-index:2;
 }
 
+#pane > div {
+    height:100%;
+}
+
 #pane a{
     color: white;
     border: 2px solid white;
@@ -142,7 +129,7 @@ ul {
 }
 
 #close-button {
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     width: 2em;
@@ -153,17 +140,20 @@ ul {
     cursor:pointer;
 }
 
-#project-links.pane-is-open {
-    width: 100vw;
-}
 
 #project-links {
     position: absolute;
     top:0;
     width: 100vw;
+    height: calc(100vh - 3.5em);
+    margin:0;
 
     -webkit-transition: width 300ms ease-out;
     transition: width 300ms ease-out;
+}
+
+#project-links.pane-is-open {
+    width: 100vw;
 }
 
 ul#project-links li {
@@ -171,28 +161,37 @@ ul#project-links li {
 }
 
 #next-page-button{
-    position:absolute;
+    position:fixed;
     bottom: 1em;
-    left: 0;
-    margin: 0 0 0 1.5em;
+    left:1.5em;
 }
 
 #project-details {
-    padding: 1.5em;
-    height:calc(100% - 8em);
-    overflow:scroll;
+    padding: 1.5em 1.5em 2.5em 1.5em;
+    height: 100%;
+    /* overflow:scroll; */
+}
 
+#spacer{
+    height:8em;
 }
 
 @media (min-width: 600px) {
 
     #pane.isVisible {
-        left: 55vw;
-        width: 45vw;
+        position:fixed;
+        right: 0;
+        left:auto;
+        width: 24em;
+    }
+
+    #next-page-button{
+        left:auto;
+        right: 15.81em;
     }
 
     #project-links.pane-is-open {
-        width: 45vw;
+        width: calc(100vw - 24em);
     }
 
 }
